MyFirstIDEProject/src/objects/Candidate__c.object
<CustomObject>
    <description>Represent an applicant who might apply for one or more positions</description>
    <fields>
        <fullName>Check1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <externalId>true</externalId>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <externalId>true</externalId>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>c-{00000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>